--- a/404.md
+++ b/404.md
@@ -1,4 +1,6 @@
-Tu t'es sans doute **trompé** dans l'adresse que tu as tapée.
+<p align="center">
+# Tu t'es sans doute **trompé** dans l'adresse que tu as tapée.
 Il n'y a rien ici :(
+</p>
 
 ![C'est le désert, ici](/desert.jpg)
