--- a/404.md
+++ b/404.md
@@ -1,8 +1,4 @@
-<p align="center">
 # Tu t'es sans doute **trompé** dans l'adresse que tu as tapée.
 Il n'y a rien ici :(
-</p>
 
-<center>
-<img source="/desert.jpg">
-</center>
+![Rien](/desert.jpg)
